Home Page was satyled

--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+          <h2 class="section__title">About Me</h2>
+          <span class="section__subtitle">My introduction</span>
+          <div class="about__container container grid">
+              <img src="assets/Image/Akho.jpg" class="about_img" alt="">
+          </div>
+      </section>
 
       <!--==================== SKILLS ====================-->
       <section class="skills section" id="skills"></section>
