About Page was added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
                         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
                   />
 
-                  <image class="home__blob-img" x='5' y='-28' href="assets/Image/Me.png" />
+                  <image
+                    class="home__blob-img"
+                    x="5"
+                    y="-28"
+                    href="assets/Image/Me.png"
+                  />
                 </g>
               </svg>
             </div>
@@ -135,22 +140,48 @@
             </div>
           </div>
           <div class="home__scroll">
-              <a href="#about" class="home__scroll-button button--flex">
-                <i class="uil uil-mouse-alt home__scroll-mouse"></i>
-                <span class="home__scroll-name">Scroll down</span>
-                <i class="uil uil-arrow-down home__scroll-arrow"></i>
-              </a>
+            <a href="#about" class="home__scroll-button button--flex">
+              <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+              <span class="home__scroll-name">Scroll down</span>
+              <i class="uil uil-arrow-down home__scroll-arrow"></i>
+            </a>
           </div>
         </div>
       </section>
 
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
-          <h2 class="section__title">About Me</h2>
-          <span class="section__subtitle">My introduction</span>
-          <div class="about__container container grid">
-              <img src="assets/Image/Akho.jpg" class="about_img" alt="">
+        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle">My introduction</span>
+        <div class="about__container container grid">
+          <img src="assets/Image/Akho.jpg" class="about__img" alt="" />
+          <div class="about__data">
+            <p class="about__description">
+              Web developer, with extensive knowledge and years of experience,
+              working in web technologies and Ui / Ux design, delivering quality
+              work.
+            </p>
+            <div class="about__info">
+                <div>
+                    <span class="about__info-title">08+</span>
+                    <span class="about-info-name">Years <br>experience</span>
+                </div>
+                <div>
+                    <span class="about__info-title">10+</span>
+                    <span class="about-info-name">Completed <br> project</span>
+                </div>
+                <div>
+                    <span class="about__info-title">1+</span>
+                    <span class="about-info-name">Companies <br> worked</span>
+                </div>
+            </div>
+            <div class="about__buttons">
+                <a download="" href="assets/Pdf/my resume.pdf" class="button button--flex">
+                   Download CV <i class="uil uil-download-alt button__icon"></i>
+                </a>
+            </div>
           </div>
+        </div>
       </section>
 
       <!--==================== SKILLS ====================-->
