About Page was styled

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
             </p>
             <div class="about__info">
                 <div>
-                    <span class="about__info-title">08+</span>
-                    <span class="about-info-name">Years <br>experience</span>
+                    <span class="about__info-title">2+</span>
+                    <span class="about-info-name">Months <br>experience</span>
                 </div>
                 <div>
                     <span class="about__info-title">10+</span>
