--- a/index.html
+++ b/index.html
@@ -191,104 +191,146 @@
 
           <div class="skills__container container grid">
               <div>
-                  <div class="skills__content">
+                  <div class="skills__content skills__open">
                       <div class="skills__header">
                         <i class="uil uil-brackets-curly skills__icon"></i>
                         <div>
                             <h1 class="skills__title">Frontend developer</h1>
-                            <span class="skill__subtitle">More than 3 months</span>
+                            <span class="skills__subtitle">More than 3 months</span>
                         </div>  
                         <i class="uil uil-angle-down skills__arrow"></i>
                     </div>
                     <div class="skills__list grid">
                         <div class="skills__data">
-                            <div class="skills__title">
+                            <div class="skills__titles">
                                 <h3 class="skills__name">HTML</h3>
                                 <span class="skills__number">90%</span>
                             </div>
-                            <div class="skills_bar">
+                            <div class="skills__bar">
                                 <span class="skills__percentage skills__html"></span>
                             </div>
                         </div>
                         <div class="skills__data">
-                            <div class="skills__title">
+                            <div class="skills__titles">
                                 <h3 class="skills__name">CSS</h3>
                                 <span class="skills__number">85%</span>
                             </div>
-                            <div class="skills_bar">
+                            <div class="skills__bar">
                                 <span class="skills__percentage skills__css"></span>
                             </div>
                         </div>
                         <div class="skills__data">
-                            <div class="skills__title">
+                            <div class="skills__titles">
                                 <h3 class="skills__name">Java Script</h3>
                                 <span class="skills__number">65%</span>
                             </div>
-                            <div class="skills_bar">
+                            <div class="skills__bar">
                                 <span class="skills__percentage skills__js"></span>
                             </div>
                         </div>
                         <div class="skills__data">
-                            <div class="skills__title">
+                            <div class="skills__titles">
                                 <h3 class="skills__name">React JS</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills_bar">
+                            <div class="skills__bar">
                                 <span class="skills__percentage skills__react"></span>
                             </div>
                         </div>
                     </div>
                   </div>
 
-                  <div class="skills__content">
+                  <div class="skills__content skills__close">
                     <div class="skills__header">
                         <i class="uil uil-react skills__icon"></i>
                       <div>
                           <h1 class="skills__title">React JS developer</h1>
-                          <span class="skill__subtitle">More than 3 months</span>
+                          <span class="skills__subtitle">More than 3 months</span>
                       </div>  
                       <i class="uil uil-angle-down skills__arrow"></i>
                   </div>
                   <div class="skills__list grid">
                       <div class="skills__data">
-                          <div class="skills__title">
+                          <div class="skills__titles">
                               <h3 class="skills__name">React Hooks</h3>
                               <span class="skills__number">80%</span>
                           </div>
-                          <div class="skills_bar">
+                          <div class="skills__bar">
                               <span class="skills__percentage skills__hooks"></span>
                           </div>
                       </div>
                       <div class="skills__data">
-                          <div class="skills__title">
+                          <div class="skills__titles">
                               <h3 class="skills__name">Redux</h3>
                               <span class="skills__number">85%</span>
                           </div>
-                          <div class="skills_bar">
-                              <span class="skills__percentage skills__rudux"></span>
+                          <div class="skills__bar">
+                              <span class="skills__percentage skills__redux"></span>
                           </div>
                       </div>
                       <div class="skills__data">
-                          <div class="skills__title">
+                          <div class="skills__titles">
                               <h3 class="skills__name">React Routing</h3>
-                              <span class="skills__number">65%</span>
+                              <span class="skills__number">90%</span>
                           </div>
-                          <div class="skills_bar">
+                          <div class="skills__bar">
                               <span class="skills__percentage skills__route"></span>
                           </div>
                       </div>
                       <div class="skills__data">
-                          <div class="skills__title">
+                          <div class="skills__titles">
                               <h3 class="skills__name">React animations</h3>
-                              <span class="skills__number">70%</span>
+                              <span class="skills__number">85%</span>
                           </div>
-                          <div class="skills_bar">
+                          <div class="skills__bar">
                               <span class="skills__percentage skills__anime"></span>
                           </div>
                       </div>
                   </div>
                 </div>
 
+              </div>
+              <div>
+                <div class="skills__content skills__close">
+                    <div class="skills__header">
+                        <i class="uil uil-swatchbook skills__icon"></i>
+                      <div>
+                          <h1 class="skills__title">Designer</h1>
+                          <span class="skills__subtitle">More than 1 month</span>
+                      </div>  
+                      <i class="uil uil-angle-down skills__arrow"></i>
+                  </div>
+                  <div class="skills__list grid">
+                      <div class="skills__data">
+                          <div class="skills__titles">
+                              <h3 class="skills__name">Figma</h3>
+                              <span class="skills__number">80%</span>
+                          </div>
+                          <div class="skills__bar">
+                              <span class="skills__percentage skills__figma"></span>
+                          </div>
+                      </div>
+                      <div class="skills__data">
+                          <div class="skills__titles">
+                              <h3 class="skills__name">Sketch</h3>
+                              <span class="skills__number">75%</span>
+                          </div>
+                          <div class="skills__bar">
+                              <span class="skills__percentage skills__sketch"></span>
+                          </div>
+                      </div>
+                      <div class="skills__data">
+                          <div class="skills__titles">
+                              <h3 class="skills__name">Photoshop</h3>
+                              <span class="skills__number">70%</span>
+                          </div>
+                          <div class="skills__bar">
+                              <span class="skills__percentage skills__photoshop"></span>
+                          </div>
+                      </div>
+                      <div class="skills__data">
+                  </div>
+                </div>
               </div>
           </div>
       </section>
