Services Sections was styled

--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
                     </span>
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-content">uI/Ux <br>Designer</h4>
+                            <h4 class="services__modal-title ">UI/Ux <br>Designer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
-                            <ul class="services__modal-service">
+                            <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I develop the user interface.</p>
@@ -500,10 +500,10 @@
                     </span>
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-content">Frontend <br> Developer</h4>
+                            <h4 class="services__modal-title">Frontend <br> Developer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
-                            <ul class="services__modal-service">
+                            <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I develop the user interface.</p>
@@ -536,10 +536,10 @@
                     </span>
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-content">Branding <br> Designer</h4>
+                            <h4 class="services__modal-title">Branding <br> Designer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
-                            <ul class="services__modal-service">
+                            <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I develop the user interface.</p>
